<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="id_art">category_art</string>
    <string name="id_cars_motorcycles">category_cars_motorcycles</string>
    <string name="id_design">category_design</string>
    <string name="id_diy_crafts">category_diy_crafts</string>
    <string name="id_education">category_education</string>
    <string name="id_everything">category_everything</string>
    <string name="id_film_music_books">category_film_music_books</string>
    <string name="id_health_fitness">category_health_fitness</string>
    <string name="id_food_drink">category_food_drink</string>
    <string name="id_gardening">category_gardening</string>
    <string name="id_geek">category_geek</string>
    <string name="id_gifts">category_gifts</string>
    <string name="id_hair_beauty">category_hair_beauty</string>
    <string name="id_history">category_history</string>
    <string name="id_holidays_events">category_holidays_events</string>
    <string name="id_home_decor">category_home_decor</string>
    <string name="id_humor">category_humor</string>
    <string name="id_kids">category_kids</string>
    <string name="id_mens_fashion">category_mens_fashion</string>
    <string name="id_other">category_other</string>
    <string name="id_outdoors">category_outdoors</string>
    <string name="id_celebrities">category_celebrities</string>
    <string name="id_animals">category_animals</string>
    <string name="id_photography">category_photography</string>
    <string name="id_popular">category_popular</string>
    <string name="id_illustrations_posters">category_illustrations_posters</string>
    <string name="id_products">category_products</string>
    <string name="id_science_nature">category_science_nature</string>
    <string name="id_sports">category_sports</string>
    <string name="id_technology">category_technology</string>
    <string name="id_travel">category_travel</string>
    <string name="id_videos">category_videos</string>
    <string name="id_weddings">category_weddings</string>
    <string name="id_womens_fashion">category_womens_fashion</string>
    <string name="id_quotes">category_quotes</string>
    <string name="id_tattoos">category_tattoos</string>
    <string name="id_unknown">category_unknown</string>
    <string name="app_name">Pinterest</string>
    <string name="share">Share…</string>
    <string name="more">More…</string>
    <string name="share_via">Share via…</string>
    <string name="invite_via">Invite via…</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
    <string name="repin">Repin</string>
    <string name="pin">Pin</string>
    <string name="pins">Pins</string>
    <string name="likes">Likes</string>
    <string name="board">Board</string>
    <string name="boards">Boards</string>
    <string name="people">People</string>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="delete">Delete</string>
    <string name="create_pin">Create pin</string>
    <string name="activity">Activity</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string name="save">Save</string>
    <string name="report_pin">Report pin</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="ok">OK</string>
    <string name="all">All</string>
    <string name="everything">Everything</string>
    <string name="tos">Terms &amp; Privacy</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="followers_explanation">People who see your new pins.</string>
    <string name="following_explanation">People who show up in your feed.</string>
    <string name="home_following_explanation">People and boards you follow</string>
    <string name="following_some">Following some boards</string>
    <string name="following_all">Following all boards</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="submit">Submit</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="sorry">Sorry</string>
    <string name="warning">Warning</string>
    <string name="show">Show</string>
    <string name="find_friends">Find friends</string>
    <string name="find_friends_fb">Find Facebook friends</string>
    <string name="invite_friends">Invite friends</string>
    <string name="save_to_device">Save to device</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="user_repins_from">%s repins from</string>
    <string name="search_hint">Search…</string>
    <string name="twitter_settings">TWITTER SETTINGS</string>
    <string name="connect_to_twitter">Login with Twitter</string>
    <string name="facebook_settings">FACEBOOK SETTINGS</string>
    <string name="connect_to_facebook">Login with Facebook</string>
    <string name="publish_to_timeline">Publish to Timeline</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="turn_on_analytics">Send 3rd party analytics</string>
    <string name="about_setion">ABOUT</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="credits">Credits</string>
    <string name="onto">Onto</string>
    <string name="via">Via</string>
    <string name="orig_source">Original source</string>
    <string name="more_pins_from">See more pins from %s</string>
    <string name="repinned_by">Repinned by</string>
    <string name="pinned_by">Pinned by</string>
    <string name="board_selector">Pinning to board</string>
    <string name="app_not_found">Application not found</string>
    <string name="photo_select">Photo select</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="app_choose_dialog_title">Choose an app</string>
    <string name="cannot_do_this">Sorry, can not do that</string>
    <string name="login_date_time_fail">Check your date and time, then try again</string>
    <string name="login_generic_fail">Our server is experiencing a mild case of the hiccups.</string>
    <string name="no_internet">Check network connection and try again</string>
    <string name="login_email_fail">Please enter username or email address</string>
    <string name="login_password_fail">Please enter password</string>
    <string name="login_twitter_fail">Connecting to Twitter failed, try again.</string>
    <string name="failed_to_load">Failed to load, try again.</string>
    <string name="login_logingin">Logging in…</string>
    <string name="login_email_address">Email address</string>
    <string name="pin_more_save_success">Image saved!</string>
    <string name="pin_more_save_fail">Save failed</string>
    <string name="pin_comment_hint">Leave a comment…</string>
    <string name="pin_comment_fail">Failed to submit comment. Try again.</string>
    <string name="pin_comment_success">Comment sent!</string>
    <string name="pin_submitting_comment">Submitting comment…</string>
    <string name="pin_loading">Loading pin…</string>
    <string name="pin_state_alert_reported">Users have reported that this links to spam or other inappropriate content.</string>
    <string name="pin_detail_attrib" formatted="false">%s by %s on %s</string>
    <string name="create_bad_description">Please enter a description!</string>
    <string name="create_bad_board">Please create a board!</string>
    <string name="create_description">Description</string>
    <string name="create_description_hint">Describe your pin</string>
    <string name="create_repin_success">Repinned!</string>
    <string name="create_new_board_hint">Board name</string>
    <string name="create_new_board">Create New Board</string>
    <string name="msg_invalid_board_name">Please enter a valid board name, using only letters, numbers, and apostrophes</string>
    <string name="create_new_board_dialog_create">Create</string>
    <string name="create_new_board_wait">Creating board…</string>
    <string name="create_select_a_board">Select a board</string>
    <string name="create_new_board_fail">"Couldn't create board. Try again."</string>
    <string name="create_select_title">Select an image to pin</string>
    <string name="create_pin_title">New pin</string>
    <string name="create_pin_it_title">Pin it</string>
    <string name="create_pin_not_found">No pinnable images found</string>
    <string name="create_pin_no_boards">It looks like you don’t have any boards yet! You can save your pins onto collections, called boards. Boards make your pins easy to find later for you and your followers. Create your first board now!</string>
    <string name="user_following" formatted="false">%,d%n following</string>
    <string name="invite_message">Check out my pins on Pinterest: http://pinterest.com/invited/?username=</string>
    <string name="empty_pins_title">"%s hasn't pinned anything yet."</string>
    <string name="empty_pins_message">Their pins will show up here.</string>
    <string name="empty_boards_title">"%s hasn't created any boards yet."</string>
    <string name="empty_boards_message">"It's possible they're liking instead of pinning."</string>
    <string name="empty_likes_title">"%s hasn't liked any pins yet."</string>
    <string name="empty_likes_message">"It's possible they're pinning everything they like."</string>
    <string name="empty_my_pins_title">Your pins will show up here.</string>
    <string name="empty_my_pins_message">When you see something interesting, press Repin to pin it here.</string>
    <string name="empty_my_pins_button">"See what's popular"</string>
    <string name="empty_my_boards_title">Boards help you collect pins</string>
    <string name="empty_my_boards_message">Find things to pin in the Popular, Category and Everything feeds.</string>
    <string name="empty_my_boards_button">Create a board</string>
    <string name="empty_my_likes_title">Like pins to save them without selecting a board.</string>
    <string name="empty_my_likes_message">Press Like on a pin to save it here.</string>
    <string name="empty_my_likes_button">"See what's popular"</string>
    <string name="empty_my_followers_title">No one is following you yet.</string>
    <string name="empty_my_followers_message">"Tell your friends you're on Pinterest."</string>
    <string name="empty_my_followers_button">Find Facebook Friends</string>
    <string name="empty_my_following_title">Follow people and boards that interest you.</string>
    <string name="no_internet_title">Internet connection lost</string>
</resources>