<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/main_content" android:background="@drawable/global_bg_tile" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/global_gray_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_marginTop="10.0dip" android:text="@string/twitter" style="@style/profile_about_section_title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/grid_cell_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckedTextView android:id="@id/settings_twitter_cb" android:background="@drawable/ab_selectable_background_noline" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/connect_to_twitter" style="@style/section_item" />
        </LinearLayout>
        <TextView android:layout_marginTop="10.0dip" android:text="@string/facebook" style="@style/profile_about_section_title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/grid_cell_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckedTextView android:id="@id/settings_fb_cb" android:background="@drawable/ab_selectable_background_noline" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/connect_to_facebook" style="@style/section_item" />
            <View android:id="@id/settings_fb_timeline_divider" style="@style/section_item_divider" />
            <CheckedTextView android:id="@id/settings_fb_timeline_cb" android:background="@drawable/ab_selectable_background_noline" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/publish_to_timeline" style="@style/section_item" />
        </LinearLayout>
        <TextView android:text="@string/about" style="@style/profile_about_section_title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/grid_cell_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckedTextView android:id="@id/settings_analytics" android:background="@drawable/ab_selectable_background_noline" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/turn_on_analytics" style="@style/section_item" />
            <View style="@style/section_item_divider" />
            <RelativeLayout android:id="@id/settings_version_bt" android:background="@drawable/ab_selectable_background" android:layout_width="fill_parent" android:layout_height="60.0dip">
                <TextView android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" android:layout_centerVertical="true" style="@style/section_item" />
                <TextView android:id="@id/settings_version" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/section_item_meta" />
            </RelativeLayout>
        </LinearLayout>
        <com.pinterest.ui.grid.PAdapterFooter android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
