<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="1.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/email" android:hint="@string/login_email_address" android:inputType="textEmailAddress" android:imeOptions="actionNext|flagNoExtractUi" style="@style/login_et" />
    <View style="@style/list_cell_divider" />
    <EditText android:id="@id/password" android:hint="@string/password" android:inputType="textPassword" android:imeOptions="actionGo|flagNoExtractUi" style="@style/login_et" />
    <View style="@style/list_cell_divider" />
    <Button android:gravity="center" android:id="@id/login" android:background="@drawable/ab_selectable_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/login" android:layout_below="@id/password" style="@style/button_plain" />
</LinearLayout>
