<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom" android:id="@id/bottom_ab" android:background="@drawable/bottom_bar_background" android:layout_width="fill_parent" android:layout_height="@dimen/ab_bottom_height" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/comment_container" android:padding="@dimen/closeup_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true">
        <com.pinterest.ui.text.PEditText android:textSize="15.0dip" android:textColor="@color/text_dark" android:textColorHint="@color/text_light" android:id="@id/comment_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:hint="@string/pin_comment_hint" android:layout_toLeftOf="@id/comment_bt" android:layout_alignBottom="@id/comment_bt" android:layout_centerVertical="true" android:inputType="textCapSentences|textAutoCorrect" android:imeOptions="actionSend|flagNoExtractUi" android:imeActionLabel="@string/submit" />
        <Button android:textColor="@color/text_dark" android:id="@id/comment_bt" android:text="@string/submit" android:layout_alignParentRight="true" style="@style/button_plain" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/menu_container" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true">
        <HorizontalScrollView android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/more_bt" android:fadeScrollbars="false" android:overScrollMode="never">
            <LinearLayout android:padding="@dimen/closeup_padding" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:id="@id/repin_bt" android:layout_marginRight="8.0dip" android:text="@string/repin" android:drawableLeft="@drawable/ic_button_repin" style="@style/button_menu" />
                <Button android:id="@id/like_bt" android:text="@string/like" android:drawableLeft="@drawable/ic_button_like" style="@style/button_menu" />
                <Button android:id="@id/delete_bt" android:visibility="gone" android:text="@string/delete" android:drawableLeft="@drawable/ic_button_delete" style="@style/button_menu" />
                <Button android:id="@id/comment_tv" android:layout_marginLeft="8.0dip" android:text="@string/comment" android:drawableLeft="@drawable/ic_button_comment" style="@style/button_menu" />
            </LinearLayout>
        </HorizontalScrollView>
        <ImageButton android:id="@id/more_bt" android:background="@drawable/menu_button_selectable" android:layout_width="@dimen/menu_button_width" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>
