<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="bottom" android:id="@id/bottom_ab" android:layout_width="fill_parent" android:layout_height="@dimen/ab_bottom_height" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/top_shadow" style="@style/feather_shadow" />
    <RelativeLayout android:layout_gravity="bottom" android:id="@id/flip_containter" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/top_shadow" android:layout_alignParentBottom="true">
        <RelativeLayout android:id="@id/comment_container" android:background="@color/ui_bg_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:layout_alignParentBottom="true" android:rotationX="180.0">
            <com.pinterest.ui.text.PEditText android:textSize="15.0dip" android:textColor="@color/text_dark" android:textColorHint="@color/text_light" android:id="@id/comment_et" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/global_padding" android:hint="@string/pin_comment_hint" android:layout_toLeftOf="@id/comment_bt" android:layout_centerVertical="true" android:inputType="textCapSentences|textAutoCorrect" android:imeOptions="actionSend|flagNoExtractUi" android:imeActionLabel="@string/submit" />
            <Button android:textColor="@color/text_dark" android:id="@id/comment_bt" android:layout_margin="8.0dip" android:text="@string/submit" android:drawableLeft="@drawable/ic_comment_button" android:drawablePadding="4.0dip" android:layout_alignParentRight="true" style="@style/button_plain" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/menu_container" android:background="@color/ui_bg_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <HorizontalScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/more_bt">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:id="@id/repin_bt" android:layout_marginLeft="@dimen/global_padding" android:text="@string/repin" android:drawableLeft="@drawable/ic_button_repin" style="@style/button_menu" />
                    <Button android:id="@id/like_bt" android:text="@string/like" android:drawableLeft="@drawable/ic_button_like" style="@style/button_menu" />
                    <Button android:id="@id/delete_bt" android:visibility="gone" android:text="@string/delete" android:drawableLeft="@drawable/ic_button_delete" style="@style/button_menu" />
                    <Button android:id="@id/comment_tv" android:text="@string/comment" android:drawableLeft="@drawable/ic_comment_button" style="@style/button_menu" />
                </LinearLayout>
            </HorizontalScrollView>
            <ImageButton android:id="@id/more_bt" android:background="@drawable/ab_selectable_background" android:layout_width="40.0dip" android:layout_height="wrap_content" android:src="@drawable/menu_button" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
