<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:pinterest="http://schemas.android.com/apk/res/com.pinterest">
    <RelativeLayout android:paddingLeft="@dimen/global_padding" android:paddingRight="@dimen/global_padding" android:layout_width="fill_parent" android:layout_height="@dimen/search_nav_height">
        <com.pinterest.ui.QuitableEditText android:textSize="14.0dip" android:id="@id/search_et" android:background="@drawable/search_field" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/search_hint" android:maxLines="1" android:singleLine="true" android:layout_centerVertical="true" android:inputType="textCapSentences|textAutoCorrect" android:imeOptions="actionSearch|flagNoExtractUi" />
        <ImageView android:id="@id/search_bt" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/divider" android:background="@color/ui_bg_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <com.pinterest.ui.tab.EqualTabBar android:id="@id/tabbar" android:layout_width="fill_parent" android:layout_height="@dimen/search_nav_height">
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="-3.0px" android:layout_weight="1.0" pinterest:text="@string/pins" style="@style/TabSearchPins" />
        <View android:background="@drawable/tab_divider_light" android:layout_width="3.0px" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" />
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-3.0px" android:layout_marginRight="-3.0px" android:layout_weight="1.0" pinterest:text="@string/boards" style="@style/TabSearchBoards" />
        <View android:background="@drawable/tab_divider_light" android:layout_width="3.0px" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" />
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-3.0px" android:layout_weight="1.0" pinterest:text="@string/people" style="@style/TabSearchPeople" />
    </com.pinterest.ui.tab.EqualTabBar>
</LinearLayout>
