<?xml version="1.0" encoding="utf-8"?>
<com.pinterest.activity.user.view.UserHeaderView android:layout_width="fill_parent" android:layout_height="@dimen/actionbar_user_height"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:pinterest="http://schemas.android.com/apk/res/com.pinterest">
    <RelativeLayout android:id="@id/user_profile" android:background="@drawable/global_bg_tile_light" android:paddingRight="@dimen/global_padding" android:layout_width="fill_parent" android:layout_height="@dimen/user_header_info_height" android:layout_alignParentRight="true">
        <FrameLayout style="@style/button_container">
            <Button android:id="@id/user_follow_btn" android:visibility="gone" style="@style/button_follow" />
            <Button android:id="@id/user_unfollow_btn" android:visibility="gone" android:text="@string/unfollow" style="@style/button_plain" />
        </FrameLayout>
        <com.pinterest.ui.progressbar.ProgressSpinnerView android:id="@id/loading_pb" android:layout_width="26.0dip" android:layout_height="26.0dip" android:layout_marginRight="@dimen/global_padding" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <com.pinterest.ui.imageview.PImageView android:id="@id/user_header_userimage" android:background="@color/ui_bg_light" android:layout_margin="@dimen/global_padding" android:layout_centerVertical="true" style="@style/thumbnail_image" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/button_container" android:layout_toRightOf="@id/user_header_userimage" android:layout_centerVertical="true">
            <TextView android:id="@id/user_header_username" android:drawablePadding="@dimen/global_padding" style="@style/text_title" />
            <TextView android:id="@id/user_header_userstats" android:visibility="gone" android:layout_marginTop="-2.0dip" android:layout_below="@id/user_header_username" style="@style/text_subtitle" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:id="@id/divider" android:background="@drawable/bevel_divider" android:layout_width="fill_parent" android:layout_height="2.0px" android:layout_below="@id/user_profile" />
    <com.pinterest.ui.tab.EqualTabBar android:id="@id/tabbar" android:layout_width="fill_parent" android:layout_height="@dimen/user_header_nav_height" android:layout_below="@id/divider">
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginRight="-3.0px" android:layout_weight="1.0" pinterest:text="@string/boards" style="@style/TabUserBoards" />
        <View android:background="@drawable/tab_divider_light" android:layout_width="3.0px" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" />
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-3.0px" android:layout_marginRight="-3.0px" android:layout_weight="1.0" pinterest:text="@string/pins" style="@style/TabUserPins" />
        <View android:background="@drawable/tab_divider_light" android:layout_width="3.0px" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" />
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-3.0px" android:layout_marginRight="-3.0px" android:layout_weight="1.0" pinterest:text="@string/likes" style="@style/TabUserLikes" />
        <View android:background="@drawable/tab_divider_light" android:layout_width="3.0px" android:layout_height="fill_parent" android:layout_marginBottom="2.0dip" />
        <com.pinterest.ui.tab.TabButton android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="-3.0px" android:layout_weight="1.0" pinterest:text="@string/about" style="@style/TabUserAbout" />
    </com.pinterest.ui.tab.EqualTabBar>
</com.pinterest.activity.user.view.UserHeaderView>
