<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="28.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/loading_pb" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/loading_pin" />
    <FrameLayout android:id="@id/container" android:background="@drawable/blankstate_bg" android:paddingLeft="20.0dip" android:paddingTop="28.0dip" android:paddingRight="20.0dip" android:paddingBottom="28.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.7">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/empty_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/icon_iv" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" />
            <TextView android:gravity="center_horizontal" android:id="@id/title_tv" android:layout_marginBottom="8.0dip" style="@style/list_empty_title" />
            <TextView android:gravity="center_horizontal" android:id="@id/message_tv" style="@style/list_empty_message" />
            <Button android:gravity="center" android:id="@id/action_bt" android:visibility="gone" android:layout_marginTop="24.0dip" style="@style/button_red" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/no_internet" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:src="@drawable/ic_blankstate_connection_error" />
            <TextView android:gravity="center_horizontal" android:layout_marginBottom="8.0dip" android:text="@string/no_internet_title" style="@style/list_empty_title" />
            <TextView android:gravity="center_horizontal" android:id="@id/message_tv" android:text="@string/no_internet" style="@style/list_empty_message" />
            <Button android:gravity="center" android:id="@id/refresh_bt" android:visibility="gone" android:layout_marginTop="24.0dip" android:text="@string/refresh" style="@style/button_red" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
